--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -211,6 +211,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003161047345_InitialCreate.cs" />
+    <Compile Include="Migrations\202003161047345_InitialCreate.Designer.cs">
+      <DependentUpon>202003161047345_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003161931182_Initial.cs" />
+    <Compile Include="Migrations\202003161931182_Initial.Designer.cs">
+      <DependentUpon>202003161931182_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -306,6 +315,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202003161047345_InitialCreate.resx">
+      <DependentUpon>202003161047345_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003161931182_Initial.resx">
+      <DependentUpon>202003161931182_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
