--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BrokerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -219,13 +220,21 @@
     <Compile Include="Migrations\202003161931182_Initial.Designer.cs">
       <DependentUpon>202003161931182_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003171853500_Initial1.cs" />
+    <Compile Include="Migrations\202003171853500_Initial1.Designer.cs">
+      <DependentUpon>202003171853500_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BrokerModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Repositories\BrokerRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
+    <Compile Include="Services\BrokerService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -322,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003161931182_Initial.resx">
       <DependentUpon>202003161931182_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003171853500_Initial1.resx">
+      <DependentUpon>202003171853500_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
