--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\202003201031539_1.Designer.cs">
       <DependentUpon>202003201031539_1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003202234553_2.cs" />
+    <Compile Include="Migrations\202003202234553_2.Designer.cs">
+      <DependentUpon>202003202234553_2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -341,6 +345,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202003201031539_1.resx">
       <DependentUpon>202003201031539_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003202234553_2.resx">
+      <DependentUpon>202003202234553_2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
