--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -249,7 +249,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Common, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.Common.4.3.0\lib\net451\System.Data.Common.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.OracleClient" />
+    <Reference Include="System.Data.SqlClient, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SqlClient.4.3.0\lib\net46\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.5.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
@@ -466,6 +474,9 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="TableDependency.SqlClient, Version=8.5.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SqlTableDependency.8.5.8\lib\net451\TableDependency.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -575,33 +586,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\NotificationHub.cs" />
-    <Compile Include="Migrations\202003201031539_1.cs" />
-    <Compile Include="Migrations\202003201031539_1.Designer.cs">
-      <DependentUpon>202003201031539_1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003202234553_2.cs" />
-    <Compile Include="Migrations\202003202234553_2.Designer.cs">
-      <DependentUpon>202003202234553_2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003211350564_3.cs" />
-    <Compile Include="Migrations\202003211350564_3.Designer.cs">
-      <DependentUpon>202003211350564_3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003251240370_4.cs" />
-    <Compile Include="Migrations\202003251240370_4.Designer.cs">
-      <DependentUpon>202003251240370_4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202003252335243_5.cs" />
-    <Compile Include="Migrations\202003252335243_5.Designer.cs">
-      <DependentUpon>202003252335243_5.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BrokerModel.cs" />
+    <Compile Include="Models\BrokerViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Controllers\InfoController.cs" />
     <Compile Include="Models\InterestedModels.cs" />
     <Compile Include="Models\ShareModel.cs" />
+    <Compile Include="Models\ShareViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\MyIdProvider.cs" />
@@ -652,12 +645,19 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include="Scripts\jquery.color-2.1.2.js" />
+    <Content Include="Scripts\jquery.color-2.1.2.min.js" />
+    <Content Include="Scripts\jquery.color.svg-names-2.1.2.js" />
+    <Content Include="Scripts\jquery.color.svg-names-2.1.2.min.js" />
     <Content Include="Scripts\knockout-3.5.1.debug.js" />
     <Content Include="Scripts\knockout-3.5.1.js" />
     <Content Include="Views\Acc\Login.cshtml" />
     <Content Include="Views\Acc\Index.cshtml" />
     <Content Include="Views\Acc\Register.cshtml" />
     <Content Include="Views\Acc\complete.cshtml" />
+    <Content Include="Views\Info\Shares.cshtml" />
+    <Content Include="Views\Info\Brokers.cshtml" />
+    <Content Include="Views\Info\Announcements.cshtml" />
     <None Include="Views\Test\Index2.cshtml" />
     <None Include="Views\Test\Index3.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -737,23 +737,6 @@
     <Analyzer Include="..\packages\Microsoft.NetCore.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetCore.CSharp.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202003201031539_1.resx">
-      <DependentUpon>202003201031539_1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003202234553_2.resx">
-      <DependentUpon>202003202234553_2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003211350564_3.resx">
-      <DependentUpon>202003211350564_3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003251240370_4.resx">
-      <DependentUpon>202003251240370_4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003252335243_5.resx">
-      <DependentUpon>202003252335243_5.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
