--- a/ShareTrader/packages.config
+++ b/ShareTrader/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="jQuery.Color" version="2.1.2" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="knockoutjs" version="3.5.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
@@ -103,6 +104,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="SqlTableDependency" version="8.5.8" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
@@ -110,6 +112,8 @@
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net472" />
