transaction functionality. Only server side. Created a general query. The transactions are stored with key information, so user to query has to use userid + shareid. Not ideal

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 #Manually created
 ShareTrader/Migrations/*
 ShareTrader/SignalR.Sample/*
+#all the jquery and other libraries
+ShareTrader/Scripts/jquery*
+ShareTrader/Scripts/knockout*
+
 
 # User-specific files
 *.rsuser
