--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -581,6 +581,7 @@
     <Compile Include="Controllers\InterestController.cs" />
     <Compile Include="Controllers\ShareController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\TradeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -595,6 +596,8 @@
     <Compile Include="Models\InterestedModels.cs" />
     <Compile Include="Models\ShareModel.cs" />
     <Compile Include="Models\ShareViewModels.cs" />
+    <Compile Include="Models\TradeModel.cs" />
+    <Compile Include="Models\TradeViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\MyIdProvider.cs" />
@@ -602,12 +605,15 @@
     <Compile Include="Repositories\InterestedRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\ShareRepository.cs" />
+    <Compile Include="Repositories\TradeRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Services\BrokerService.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\IWatcher.cs" />
     <Compile Include="Services\NotificationService.cs" />
     <Compile Include="Services\ShareService.cs" />
+    <Compile Include="Services\TradeService.cs" />
+    <Compile Include="Services\WatcherService.cs" />
     <Compile Include="SignalR.Sample\Startup.cs" />
     <Compile Include="SignalR.Sample\Stock.cs" />
     <Compile Include="SignalR.Sample\StockTicker.cs" />
