--- a/ShareTrader/ShareTrader.csproj
+++ b/ShareTrader/ShareTrader.csproj
@@ -657,6 +657,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Scripts\daterangepicker.js" />
+    <Content Include="Scripts\helpersApp.js" />
     <Content Include="Scripts\jquery.color-2.1.2.js" />
     <Content Include="Scripts\jquery.color-2.1.2.min.js" />
     <Content Include="Scripts\jquery.color.svg-names-2.1.2.js" />
@@ -671,13 +672,14 @@
     <Content Include="Views\Acc\Login.cshtml" />
     <Content Include="Views\Acc\Index.cshtml" />
     <Content Include="Views\Acc\Register.cshtml" />
-    <Content Include="Views\Acc\complete.cshtml" />
+    <Content Include="Views\Acc\LoginRegister.cshtml" />
     <Content Include="Views\Info\Shares.cshtml" />
     <Content Include="Views\Info\Brokers.cshtml" />
     <Content Include="Views\Info\Announcements.cshtml" />
     <Content Include="Views\Info\Trades.cshtml" />
     <Content Include="Views\Info\InterestedShares.cshtml" />
     <Content Include="Scripts\proxy-config.js" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Views\Test\Index2.cshtml" />
     <None Include="Views\Test\Index3.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -709,7 +711,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index_old.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="SignalR.Sample\jquery-1.10.2.min.map" />
